--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <table cellspacing="20">
         <tr>
             <td>
-                <img src="C:\Users\akash\Pictures\320954444_410295361262414_3059035370531091933_n-modified.png" alt="Akash profile picture">
+                <img src="https://github.com/Khalekarakash03/cv/blob/main/320954444_410295361262414_3059035370531091933_n-modified.png?raw=true" alt="Akash profile picture">
             </td>
             <td>
                 <h1>AKASH KHALEKAR</h1>
