--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
 
     <title>Akash Khalekar Personal Site</title>
 </head>
+    <style>
+        img{
+            height: 200px;
+        }
+    </style>
 <body>
     <table cellspacing="20">
         <tr>
             <td>
-                <img src="Akashkhalekar.png" alt="Akash profile picture">
+                <img src="Akashkhalekar.png" alt="Akash profile picture" >
             </td>
             <td>
                 <h1>AKASH KHALEKAR</h1>
